extra/sampleapp2/2048_deployment-ng1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game1-2048
  name: deployment-2048-ng1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app1-2048
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app1-2048
    spec:
      containers:
      - image: ACCOUNT_ID.dkr.ecr.AWS_REGION.amazonaws.com/sample-app
        imagePullPolicy: Always
        name: app1-2048
        ports:
        - containerPort: 80
      nodeSelector:
        eks/nodegroup-name:  ng1-mycluster1
