extra/sampleapp2/2048_service2.yml
apiVersion: v1
kind: Service
metadata:
  namespace: game2-2048
  name: service2-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app2-2048
