extra/sampleapp2/2048_ingress1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: game1-2048
  name: ingress-1-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/group.name: my-team.group1

spec:
  rules:
    - http:
        paths:
          - path: /app1
            backend:
              serviceName: service1-2048
              servicePort: 80
